syntax = "proto3";

package netoviz;

service TopologyData {
  rpc GetGraphData (GraphRequest) returns (GraphReply);
  rpc GetModels (ModelRequest) returns (ModelReply);
}

enum GraphName {
  GRAPH_UNKNOWN = 0;
  FORCE_SIMULATION = 1;
  DEPENDENCY = 2;
  NESTED = 3;
  DISTANCE = 4;
}

message GraphRequest {
  GraphName graph_name = 1;
  string model_file = 2;
  string alert_host = 3;
  uint32 depth = 4;
  bool aggregate = 5;
  bool reverse = 6;
  bool fit_grid = 7;
}

// TODO: temporary message format
message GraphReply {
  GraphName graph_name = 1;
  string model_file = 2;
  string json = 3; // json string of diagram data
}

message ModelRequest {}

message ModelReply {
  string json = 1;
}
